# securbot

./: .gitignore  .gitmodules  LICENSE  README  README.md
PCB design/: .gitignore
Robot_Software/: README  README.md
Robot_Software/electron_webrtc/: .eslintrc.js  CMakeLists.txt  index.html  ipcInit.js  jsdoc.conf.js  jsdoc.config.js  main.js  package-lock.json  package.json  renderer.js
Robot_Software/electron_webrtc/launch/: electron_webrtc.launch  vnf_electron.launch
Robot_Software/electron_webrtc/scripts/: start_node.bash
assets/: readme.md
backend/: Dockerfile  data_model.md  devServer.js  package-lock.json  package.json  server.js
dashboard/: .dockerignore  .gitignore  Dockerfile  build.sh  dashboard.js  dashboard.service  index.js  mail.js  package.json  pdf.js  readme.md  render.js  render.sh  renderAndMail.js  renderMail.sh  run.sh  scheduledRender.js  settings_template.json  start.sh  worklog.js
docs/: annotated.html  autonomous_8h_source.html  class_template_class_name-members.html  class_template_class_name.html  classmode.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions_enum.html  functions_eval.html  functions_vars.html  globals.html  globals_defs.html  index.html  struct__s_battery_cells_state-members.html  struct__s_battery_cells_state.html
firmware/: README.md
frontend/: .dockerignore  .env.example  .eslintrc.js  .gitignore  .markdownlint.json  CHANGELOG.md  Dockerfile  README.md  TODO.md  docker-compose.yml  jsdoc.config.js  nginx.conf  package-lock.json  package.json  styleguide.config.js  vue.config.js
(+2011 files in other folders)
